Bind model data to UI using liveData

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="std_16">16dp</dimen>
     <dimen name="std_48">48dp</dimen>
+    <dimen name="std_144">144dp</dimen>
 </resources>
