--- a/app/src/main/res/layout/rv_github_user_list_item.xml
+++ b/app/src/main/res/layout/rv_github_user_list_item.xml
@@ -9,7 +9,9 @@
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/std_48"
         android:layout_height="@dimen/std_48"
+        android:layout_marginTop="@dimen/std_8"
         android:layout_marginStart="@dimen/std_16"
+        android:layout_marginBottom="@dimen/std_8"
         android:contentDescription="@null"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/std_16"
+        android:layout_marginEnd="@dimen/std_16"
         android:gravity="center_vertical|start"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
