--- a/app/src/main/res/layout/rv_github_user_list_item.xml
+++ b/app/src/main/res/layout/rv_github_user_list_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -24,9 +25,11 @@
         android:layout_marginStart="@dimen/std_16"
         android:layout_marginEnd="@dimen/std_16"
         android:gravity="center_vertical|start"
+        android:textColor="?attr/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="Maxim Alov" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
