--- a/navigation/src/main/res/values/ids.xml
+++ b/navigation/src/main/res/values/ids.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <item name="nav_fragment_github_gist_list" type="id" />
     <item name="nav_fragment_github_repo_list" type="id" />
     <item name="nav_fragment_github_user_details" type="id" />
     <item name="nav_fragment_github_user_list" type="id" />
