--- a/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/layout/fragment_github_user_details.xml
+++ b/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/layout/fragment_github_user_details.xml
@@ -5,13 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btn_organization_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/std_24"
+        android:background="?selectableItemBackground"
+        android:text="@string/btn_github_organization_list"
+        android:textColor="?colorAccent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/std_144"
         android:layout_height="@dimen/std_144"
         android:contentDescription="@null"
         app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_organization_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/tv_title" />
