--- a/navigation/src/main/res/navigation/main_nav_graph.xml
+++ b/navigation/src/main/res/navigation/main_nav_graph.xml
@@ -27,6 +27,10 @@
             app:destination="@id/nav_fragment_github_gist_list" />
 
         <action
+            android:id="@+id/nav_action_open_github_organization_list"
+            app:destination="@id/nav_fragment_github_organization_list" />
+
+        <action
             android:id="@+id/nav_action_open_github_repo_list"
             app:destination="@id/nav_fragment_github_repo_list" />
     </fragment>
@@ -34,6 +38,16 @@
     <fragment
         android:id="@id/nav_fragment_github_gist_list"
         android:name="com.orcchg.direcall.feature.github_user_gists.impl.presentation.ui.GithubUserGistsFragment">
+
+        <argument
+            android:name="login"
+            app:argType="string"
+            android:defaultValue="" />
+    </fragment>
+
+    <fragment
+        android:id="@id/nav_fragment_github_organization_list"
+        android:name="com.orcchg.direcall.feature.github_user_organizations.impl.presentation.ui.GithubUserOrganizationsFragment">
 
         <argument
             android:name="login"
