--- a/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/layout/fragment_github_user_details.xml
+++ b/Feature/GithubUserDetails/GithubUserDetailsImpl/src/main/res/layout/fragment_github_user_details.xml
@@ -54,11 +54,23 @@
         android:id="@+id/btn_gist_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/std_24"
+        android:layout_marginTop="@dimen/std_16"
         android:background="?selectableItemBackground"
         android:text="@string/btn_github_gist_list"
         android:textColor="?colorAccent"
         app:layout_constraintTop_toBottomOf="@id/btn_repo_list"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_follower_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/std_16"
+        android:background="?selectableItemBackground"
+        android:text="@string/btn_github_follower_list"
+        android:textColor="?colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/btn_gist_list"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
