--- a/navigation/src/main/res/navigation/main_nav_graph.xml
+++ b/navigation/src/main/res/navigation/main_nav_graph.xml
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_user_details"
-        android:name="com.orcchg.direcall.feature.githubuserdetails.impl.presentation.ui.GithubUserDetailsFragment">
+        android:name="com.orcchg.direcall.feature.github_user_details.dfm.presentation.ui.GithubUserDetailsFragment">
 
         <argument
             android:name="login"
