Add :GithubUserProfile feature that accumulates data and logic from many other features

--- a/Feature/GithubUserDetails/GithubUserDetailsDfm/src/main/res/layout/fragment_github_user_details.xml
+++ b/Feature/GithubUserDetails/GithubUserDetailsDfm/src/main/res/layout/fragment_github_user_details.xml
@@ -21,7 +21,9 @@
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/std_144"
         android:layout_height="@dimen/std_144"
+        android:clickable="true"
         android:contentDescription="@null"
+        android:focusable="true"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/btn_organization_list"
         app:layout_constraintStart_toStartOf="parent"
