--- a/navigation/src/main/res/values/ids.xml
+++ b/navigation/src/main/res/values/ids.xml
@@ -3,6 +3,7 @@
     <item name="nav_fragment_github_follower_list" type="id" />
     <item name="nav_fragment_github_gist_list" type="id" />
     <item name="nav_fragment_github_organization_list" type="id" />
+    <item name="nav_fragment_github_profile" type="id" />
     <item name="nav_fragment_github_repo_list" type="id" />
     <item name="nav_fragment_github_user_details" type="id" />
     <item name="nav_fragment_github_user_list" type="id" />
