--- a/navigation/src/main/res/navigation/main_nav_graph.xml
+++ b/navigation/src/main/res/navigation/main_nav_graph.xml
@@ -59,7 +59,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_gist_list"
-        android:name="com.orcchg.direcall.feature.github_user_gists.impl.presentation.ui.GithubUserGistsFragment">
+        android:name="com.orcchg.direcall.feature.github_user_gists.dfm.presentation.ui.GithubUserGistsFragment">
 
         <argument
             android:name="login"
