--- a/navigation/src/main/res/navigation/main_nav_graph.xml
+++ b/navigation/src/main/res/navigation/main_nav_graph.xml
@@ -69,7 +69,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_organization_list"
-        android:name="com.orcchg.direcall.feature.github_user_organizations.impl.presentation.ui.GithubUserOrganizationsFragment">
+        android:name="com.orcchg.direcall.feature.github_user_organizations.dfm.presentation.ui.GithubUserOrganizationsFragment">
 
         <argument
             android:name="login"
