Prepare :Ui module for :demo-app, because DFM can't be tested with standalone application due to it's transitive dependency on :app module

--- a/navigation/src/main/res/navigation/main_nav_graph.xml
+++ b/navigation/src/main/res/navigation/main_nav_graph.xml
@@ -79,7 +79,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_profile"
-        android:name="com.orcchg.direcall.feature.github_user_profile.dfm.presentation.ui.GithubUserProfileFragment">
+        android:name="com.orcchg.direcall.feature.github_user_profile.ui.presentation.ui.GithubUserProfileFragment">
 
         <argument
             android:name="login"
