--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/nav_fragment_github_user_details">
+    app:startDestination="@id/nav_fragment_github_user_list">
 
     <fragment
         android:id="@id/nav_fragment_github_user_details"
@@ -13,6 +13,13 @@
         <argument
             android:name="login"
             android:defaultValue="orcchg" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_fragment_github_user_list"
+        android:name="com.orcchg.direcall.ui.GithubUserListFragment"
+        tools:layout="@layout/fragment_github_user_list">
+
     </fragment>
 
 </navigation>
