--- a/app/src/main/res/layout/fragment_github_user_list.xml
+++ b/app/src/main/res/layout/fragment_github_user_list.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/list_recycler_view"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rv_items"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent" />
 
-</androidx.recyclerview.widget.RecyclerView>
