--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -16,10 +16,7 @@
     </fragment>
 
     <fragment
-        android:id="@+id/nav_fragment_github_user_list"
+        android:id="@id/nav_fragment_github_user_list"
         android:name="com.orcchg.direcall.ui.GithubUserListFragment"
-        tools:layout="@layout/fragment_github_user_list">
-
-    </fragment>
-
+        tools:layout="@layout/fragment_github_user_list" />
 </navigation>
