ANDROIDSTUDY-T-7:Add github user list screen with Fragment

--- a/app/src/main/res/layout/rv_item_github_user.xml
+++ b/app/src/main/res/layout/rv_item_github_user.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="@dimen/std_16"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="@dimen/std_8">
 
     <ImageView
         android:id="@+id/iv_avatar"
