--- a/app/src/main/res/layout/rv_item_github_user.xml
+++ b/app/src/main/res/layout/rv_item_github_user.xml
@@ -14,8 +14,7 @@
         android:layout_width="@dimen/std_48"
         android:layout_height="@dimen/std_48"
         android:layout_marginStart="@dimen/std_8"
-        android:layout_marginEnd="@dimen/std_16"
-        android:background="@drawable/iv_shape_user_list" />
+        android:layout_marginEnd="@dimen/std_16" />
 
     <TextView
         android:id="@+id/tv_login"
