--- a/app/src/main/res/layout/fragment_github_user_details.xml
+++ b/app/src/main/res/layout/fragment_github_user_details.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/std_24"
         android:background="?selectableItemBackground"
+        android:padding="@dimen/std_16"
         android:text="@string/btn_github_repo_list"
         android:textColor="?colorAccent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
