--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -12,6 +12,9 @@
         <argument
             android:name="login"
             android:defaultValue="orcchg" />
+        <action
+            android:id="@+id/action_nav_fragment_github_user_details_to_nav_fragment_github_repo_list"
+            app:destination="@id/nav_fragment_github_repo_list" />
     </fragment>
 
     <fragment
@@ -22,4 +25,14 @@
             android:id="@+id/action_nav_fragment_github_user_list_to_nav_fragment_github_user_details"
             app:destination="@id/nav_fragment_github_user_details" />
     </fragment>
+
+    <fragment
+        android:id="@id/nav_fragment_github_repo_list"
+        android:name="com.orcchg.direcall.ui.GithubUserRepoFragment"
+        tools:layout="@layout/fragment_github_user_repo_list">
+        <argument
+            android:name="login"
+            android:defaultValue="orcchg" />
+    </fragment>
+
 </navigation>
