--- a/app/src/main/res/layout/fragment_github_user_details.xml
+++ b/app/src/main/res/layout/fragment_github_user_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,33 +9,74 @@
         android:layout_width="@dimen/std_144"
         android:layout_height="@dimen/std_144"
         android:contentDescription="@null"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/tv_title" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/std_48"
-        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />
 
     <Button
         android:id="@+id/btn_repo_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/std_144"
+        android:layout_height="@dimen/std_48"
         android:layout_marginTop="@dimen/std_24"
         android:background="?selectableItemBackground"
         android:padding="@dimen/std_16"
         android:text="@string/btn_github_repo_list"
         android:textColor="?colorAccent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    <Button
+        android:id="@+id/btn_gist_list"
+        android:layout_width="@dimen/std_144"
+        android:layout_height="@dimen/std_48"
+        android:layout_marginTop="@dimen/std_24"
+        android:background="?selectableItemBackground"
+        android:padding="@dimen/std_16"
+        android:text="@string/btn_github_gist_list"
+        android:textColor="?colorAccent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_repo_list" />
+
+    <Button
+        android:id="@+id/btn_followers_list"
+        android:layout_width="@dimen/std_144"
+        android:layout_height="@dimen/std_48"
+        android:layout_marginTop="@dimen/std_24"
+        android:background="?selectableItemBackground"
+        android:padding="@dimen/std_16"
+        android:text="@string/btn_github_followers_list"
+        android:textColor="?colorAccent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_gist_list" />
+
+    <Button
+        android:id="@+id/btn_orgs_list"
+        android:layout_width="@dimen/std_144"
+        android:layout_height="@dimen/std_48"
+        android:layout_marginTop="@dimen/std_24"
+        android:background="?selectableItemBackground"
+        android:padding="@dimen/std_16"
+        android:text="@string/btn_github_org_list"
+        android:textColor="?colorAccent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_followers_list" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
