--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="nav_fragment_github_repo_list" type="id" />
     <item name="nav_fragment_github_user_details" type="id" />
     <item name="nav_fragment_github_user_list" type="id" />
+    <item name="nav_fragment_github_gist_list" type="id" />
 </resources>
