--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -15,6 +15,9 @@
         <action
             android:id="@+id/action_nav_fragment_github_user_details_to_nav_fragment_github_repo_list"
             app:destination="@id/nav_fragment_github_repo_list" />
+        <action
+            android:id="@+id/action_nav_fragment_github_user_details_to_nav_fragment_github_gist_list"
+            app:destination="@id/nav_fragment_github_gist_list" />
     </fragment>
 
     <fragment
@@ -30,6 +33,15 @@
         android:id="@id/nav_fragment_github_repo_list"
         android:name="com.orcchg.direcall.ui.GithubUserReposFragment"
         tools:layout="@layout/fragment_github_user_repo_list">
+        <argument
+            android:name="login"
+            android:defaultValue="orcchg" />
+    </fragment>
+
+    <fragment
+        android:id="@id/nav_fragment_github_gist_list"
+        android:name="com.orcchg.direcall.ui.GithubUserRepoFragment"
+        tools:layout="@layout/fragment_github_user_gist_list">
         <argument
             android:name="login"
             android:defaultValue="orcchg" />
