--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -40,7 +40,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_gist_list"
-        android:name="com.orcchg.direcall.ui.GithubUserRepoFragment"
+        android:name="com.orcchg.direcall.ui.GithubUserGistListFragment"
         tools:layout="@layout/fragment_github_user_gist_list">
         <argument
             android:name="login"
