--- a/app/src/main/res/layout/fragment_github_user_repo_list.xml
+++ b/app/src/main/res/layout/fragment_github_user_repo_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rv_repo_items"
     android:layout_width="match_parent"
