--- a/app/src/main/res/layout/rv_item_github_user_repo.xml
+++ b/app/src/main/res/layout/rv_item_github_user_repo.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_repo_name"
