--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -28,7 +28,7 @@
 
     <fragment
         android:id="@id/nav_fragment_github_repo_list"
-        android:name="com.orcchg.direcall.ui.GithubUserRepoFragment"
+        android:name="com.orcchg.direcall.ui.GithubUserReposFragment"
         tools:layout="@layout/fragment_github_user_repo_list">
         <argument
             android:name="login"
